# BioTK

./: .env  .gitignore  BioTK.ijs  BioTK.yml  Makefile  NOTES.rst  README.rst  TODO.rst  binary-requirements.txt  celeryconfig.py  dev.sh  manage.py  requirements.txt  rwanda.yml  setup.cfg  setup.py  test.py  tox.ini
BioTK/: GO.py  __init__.py  cli.py  config.py  db.py  default.cfg  git.py  mixin.py  mmat.py  ontology.py  plot.py  r.py  resource.py  ui.py  util.py
BioTK/annotation/: geo.py
BioTK/api/: __init__.py  region.py  route.py  tests.py  urls.py  views.py
BioTK/cache/: memory.py
BioTK/cli/: __init__.py  bigwig.py  core.py  geo.py  standalone.py
BioTK/data/: Entrez.py  GEO.py  GO.py  expression.py  schema.sql
BioTK/db/: __init__.py  core.py  geo.py  matrix.py  model.py  types.py
BioTK/expression/: __init__.py  core.py  db.py  differential.py  enrichment.py  preprocess.py
BioTK/genome/: __init__.py  index.pxd  index.pyx  types.pyx
BioTK/io/: Aspera.py  BBI.pxd  BBI.py  BED.py  MEDLINE.py  NCBI.py  OBO.py  TSV.py  Treebank.py  _BBI.pyx  __init__.py  cache.py  common.py  taqman.py
BioTK/learn/: __init__.py  cv.py  hyperparameter.py
BioTK/matrix/: __init__.py  preprocess.py  store.py
BioTK/plot/: __init__.py  heatmap.py
BioTK/script/: expression_db.py  medline2txt.py  plot_expression.py  sync-geo.py
BioTK/standalone/: neo.py
BioTK/statistics/: correlation.py  meta_analysis.py
BioTK/task/: __init__.py  config.py  etc.py  queue.py  region.py
BioTK/text/: AhoCorasick.pyx  __init__.py  event.py  lexicon.py
BioTK/ui/: __init__.py  age.py  framework.py  region.py  serve.py  settings.py  urls.py
age_atlas/: manage.py
age_atlas/age_atlas/: settings.py  urls.py  views.py  wsgi.py
bower/: bower.json
clojure/: .bowerrc  config.clj  project.clj  test.json
clojure/resources/: atlas.table.js
dev/: update-docs.sh
doc/: index.rst
doc/man/: btk.rst
doc/sphinx/: configuration.rst  datasets.rst  dev.rst  hacking.rst  index.rst  install.rst  sequencing.rst  tutorial.rst
etc/: BioTK.yml
etc/profile.d/: BioTK.sh
hooks/: pre-commit
install/: archlinux.sh  ubuntu.sh
lib/: CMakeLists.txt
lib/depends/: required
lib/include/: BioTK.hpp
lib/include/BioTK/: algorithm.hpp  cache.hpp  common.hpp  config.hpp  cuda.h  cuda.hpp  data.hpp  expression.hpp  io.hpp  iridescent.hpp  log.hpp  matrix.hpp  seq.hpp  series.hpp  statistics.hpp  test.hpp  util.hpp
lib/include/BioTK/algorithm/: cover_tree.hpp
lib/include/BioTK/ext/: gzstream.hpp
lib/include/BioTK/iridescent/: article.hpp  document_iterator.hpp
lib/include/BioTK/seq/: bbi.hpp  sam.hpp  twobit.hpp
lib/include/BioTK/text/: AhoCorasick.hpp
lib/include/BioTK/util/: base64.hpp  fs.hpp  mmap.hpp  net.hpp  serialize.hpp
lib/src/cuda/: CMakeLists.txt  dot.cu
lib/src/ext/: CMakeLists.txt
lib/src/ext/gzstream/: gzstream.cpp
lib/src/lib/: CMakeLists.txt  cache.cpp  config.cpp  cuda.cpp  data.cpp  expression.cpp  io.cpp  iridescent.cpp  matrix.cpp  util.cpp
lib/src/lib/algorithm/: cover_tree.cpp
lib/src/lib/seq/: bbi.cpp  sam.cpp  twobit.cpp
lib/src/lib/text/: AhoCorasick.cpp
lib/src/lib/util/: base64.cpp  fs.cpp  mmap.cpp  net.cpp
lib/src/test/: CMakeLists.txt  base64.cpp  cache_test.cpp  cover_tree_test.cpp  cuda_dot_test.cpp  db.cpp  serialize.cpp  twobit.cpp
python/: .gitignore  BioTK.yml  requirements.txt  rwanda.yml  setup.py
python/BioTK/: concurrent.py  util.py
python/doc/: framework.rst
python/script/: collapse-to-genes  common.gpi  metrics  standardize  tawk  to-vw
resources/: schema.original.sql  schema.sql
resources/cfg/: default.cfg  default.yml
resources/sql/: index.sql  query.sql  schema.sql
rust/: Cargo.toml
rust/src/: btk.rs  lcg.rs  statistics.rs
rwanda/: __init__.py
rwanda/element/: __init__.py  plot.py  table.py
rwanda/templates/: base.html  menu.html
sandbox/biotk/: README.md  project.clj
script/: +1  BioTK.awk  BioTK.make  BioTK.sh  X  Y  aspera-copy  bam2bed  bam2bw  barplot  bigwig-count  bioresource  btk-correlate  btk-normalize  btk-resource  btk-zcat  btk.py  btkcgi  buffer  catwhile  collapse  collapse-matrix  collapse-to-genes  common.gpi  correlate  count-bam  count-valid  counts  csv2tsv  csv2tsv-quoted  dapply  dataset  dcut  dendrogram  dimreduce  dims  dlcache  dm  dm-correlate  dm-pmap  (+136 more)
script.0/: aspera-copy  btk  btk.py  btkdb  dataset  dataset.1  geo  plot  standardize  standardize-categorical  transpose-block  valid-rows  xmat.1
script.1/: dcut  dims  dump-expression  lmdb-import  tissue.sed  transpose
script.2/: log-transform  standardize
sql/: TODO  add-index-probe-value.sql  collapse.sql  constraint.sql  load-schema  query.sql  schema.sql  transpose.sql  view.sql
sql/query/: channel-data-by-taxon.sql  channel-data-for-taxon.sql  gene-expression-by-tissue.sql  gene-expression-in-tissue.sql  gene-expression.sql  get-evidence-id.sql  get-source-id.sql  query-gene.sql  sample-accession-map.sql  term-channel-count.sql  test.sql
sql/schema/: 00-base.sql  01-ontology.sql  (+2 more)
src/: fisher-exact.cpp
ui/: .gitignore  manage.py
util/: Makefile  README.rst
uwsgi/: api.ini
(+243 files in other folders)
